zk proofs argh
